package item.card;

import item.Player;

public interface Activatable {
    public void activate(Player player);
}
